spacing fixes

--- a/src/components/Layouts/LayoutHalfHero/LayoutHalfHero.module.css
+++ b/src/components/Layouts/LayoutHalfHero/LayoutHalfHero.module.css
@@ -1,7 +1,7 @@
 .half-hero-container {
   min-height: calc(var(--vh, 1vh) * 100);
   max-height: calc(var(--vh, 1vh) * 100);
-  grid-template-rows: 50% 40%;
+  grid-template-rows: 50vh 50vh;
   display: grid;
 }
 
@@ -9,6 +9,21 @@
   .half-hero-container {
     grid-template-rows: calc(var(--vh, 1vh) * 100) auto;
     max-height: inherit;
+  }
+}
+
+.half-hero-container.remain-split-view {
+  grid-template-rows: 60vh auto;
+}
+
+.half-hero-container.custom-height-seventy {
+  grid-template-rows: 70vh auto;
+}
+
+.half-hero-container.custom-height-seventy,
+.half-hero-container.remain-split-view {
+  @media (--viewport-sm) {
+    grid-template-rows: 50vh inherit;
   }
 }
 
